--- a/mod/thmod/localisation/english/l_english.yml
+++ b/mod/thmod/localisation/english/l_english.yml
@@ -6002,7 +6002,7 @@
  REQUIRES_PLANET_CLASS:0 "§Rต้องการหนึ่งในประเภทของดาวเคราะห์ดังต่อไปนี้: $PLANET_CLASS_LIST$§!"
  REQUIRES_ORIGIN:0 "§RRequires one of the following Origins: $ORIGIN_LIST$§!"
  CANNOT_MODIFY_TRAIT:0 "§Rคุณลักษณะนี้ไม่สามารถเพิ่มหรือลบได้§!"
- CANNOT_REMOVE_POSITIVE_TRAIT:0 "§RCannot remove beneficial Traits§!"
+ CANNOT_REMOVE_POSITIVE_TRAIT:0 "§Rไม่สามารถลบคุณลักษณะที่เป็นประโยชน์ได้§!"
  SELECT_PORTRAIT:0 "Select Portrait"
  SPECIES_MOD_NO_PLANET_CLASS:0 "เผ่าพันธุ์นี้ไม่มีสิทธิพิเศษในดาวเคราะห์"
  CREATE_PROJECT:0 "ทำโครงการพิเศษดัดแปลงพันธุกรรม"
@@ -7839,7 +7839,7 @@
  food_desc_start: "§E§Hอาหาร§! (£food£) แสดงถึงอาหารต่างๆที่จำเป็นในการดำรงและเพิ่มจำนวน £pop£ §Hประชากร§!"
  food_desc_end: "$tt_gain$§Y-§! สร้าง £district£ §H$district_farming_plural$§! $tt_colonies$\n§Y-§! $tt_market$"
  food_desc: "$food_desc_start$$food_desc_end$"
- food_desc_machine_intelligence:3 "$tt_some_need_machine$\n\n§E§H$food$§! (£food£) เป็นแหล่งของสารอาหารชีวภาพที่สิ่งมีชีวิตต้องการเพื่อรักษาร่างกายที่อ่อนแอของพวกเขา\n\n§H$civic_machine_assimilator_plural$§! ผลิต §H$food$§! สำหรับ §Hประชากรไซบอร์ก§! ของพวกเขา, และ §H$civic_machine_servitor_plural$§! สำหรับ §H$citizenship_organic_trophy$ Pops§! ของพวกเขา$food_desc_end$"
+ food_desc_machine_intelligence:3 "$tt_some_need_machine$\n\n§E§H$food$§! (£food£) เป็นแหล่งของสารอาหารชีวภาพที่สิ่งมีชีวิตต้องการเพื่อรักษาร่างกายที่อ่อนแอของพวกเขา\n\n§H$civic_machine_assimilator_plural$§! ผลิต §H$food$§! สำหรับ §Hประชากรไซบอร์ก§! ของพวกเขา, และ §H$civic_machine_servitor_plural$§! สำหรับ §Hประชากร $citizenship_organic_trophy$§! ของพวกเขา$food_desc_end$"
  minerals:0 "แร่"
  minerals_desc_start: "§E§Hแร่§! (£minerals£) ครอบคลุมทรัพยากรพื้นฐานที่ใช้สร้างสถานีและสิ่งปลูกสร้างบนดาวเคราะห์ พวกมันยังสามารถนำไปสกัดเป็น §Hโลหะผสม§! (£alloys£) ได้"
  minerals_desc_end: "$tt_gain$§Y-§! สร้าง £district£ §H$district_mining_plural$§! $tt_colonies$\n§Y-§! ใช้ §Hยานก่อสร้าง§! เพื่อสร้าง §H$mining_station_plural$§! รอบดาวเคราะห์หรือดวงดาวที่มีแร่\n§Y-§! $tt_market$"
@@ -12353,7 +12353,7 @@
  RESYNC_OOS: "Resync"
  RESYNC_OOS_TOOLTIP_SERVER: "Send a resync request to all players"
  RESYNC_OOS_TOOLTIP_CLIENT: "Wait for the server to send a resync request"
- MOD_VERSION:0 "Mod v0.73.5, Update 20/06/2024"
+ MOD_VERSION:0 "Mod v0.73.6, Update 17/08/2024"
  MOD_DEV_MSG:0 "ผู้พัฒนา: §R*ตอนนี้ม็อดยังเป็นเวอร์ชัน Alpha อยู่นะครับ คำศัพท์ยังไม่ค่อยนิ่ง หากมีการเปลี่ยนแปลงคำสำคัญจะแจ้งให้ทราบอีกครั้ง§!\n\n§Bคำที่เปลี่ยนมีดังนี้:\n - Arc Furnace -> เตาหลอมอาร์ก\n - Synaptic Lathe -> เครื่องกลึงไซแน็ปติก\n - Dyson Swarm -> ฝูงไดสัน\n - Horizon Needle -> เข็มฮอร์ริซอน \n§!\n\n§Hกรอบการทำงาน เป้าหมาย และ ลำดับความสำคัญ§!\n §E1.DLC ที่รองรับ§! :  Utopia, Synthetic Dawn, Apocalypse, MegaCorp, Federations, Nemesis, Leviathans, Distant Stars, Ancient Relics, Galactic Paragons, Overlord \n §E2. หลักเกณฑ์การทับศัพท์§! : ราชบัณฑิตยสภา \n §E3. ลำดับความสำคัญในการแปล(เรียงจากมากไปน้อย)§! : (interface/ui) -> (modifier/effect) -> (tutorial) -> (description) -> (event/message)\n\n§Hแหล่งข้อมูลและแรงบันดาลใจ§!\n §E1.หนังสือ:§! เซเปียนส์-ประวัติย่อมนุษยชาติ, โฮโมดีอุส-ประวัติย่อของวันพรุ่งนี้, ยูโทเปีย-มหานครในฝัน, หนึ่ง-เก้า-แปด-สี่ : 1984, หนังสือเรียนวิชาฟิสิกส์, เคมี, ชีว เบื้องต้นสมัยเรียนมหาลัย, วิชาปรัชญาเบื้องต้น, The Matrix and Philosophy: Welcome to the Desert of the Real\n §E2.สารคดี:§! ช่องยูทูป SCIWAYS, GrandMaster TV, คนใฝ่รู้ [Studios], eduHUB, ชีวิตสดใส, คนช่างสงสัย Curiosity Channel, อาจวรงค์ จันทมาศ, Matrix Explained, Kurzgesagt, ZogZag Story, TechOffside, One To Many - A Brief Science\n §E3.บันเทิงคดี:§! The Matrix 1-3 + The Animatrix, Interstellar, 2001: A Space Odyssey, DUNE, Avatar, Star Wars, WALL-E, Star Trek, Inception, Transcendence, Predator, All Tomorrows\n §E4.เอกสาร:§! หลักเกณฑ์การทับศัพท์ภาษาอังกฤษราชบัณฑิตยสภา\n\n§Hเครื่องมือที่ใช้สร้างม็อดมีดังนี้§!\nLocalisation-Manager(Stellaris), Localisation-Editor, MadeeAI Translator"
  MOD_SUPPORTERS:0 "ผู้สนับสนุน: n/a"
  MOD_TEST1DUMMY1:0 "dummy1"
