--- a/mod/thmod/localisation/english/machine_age_l_english.yml
+++ b/mod/thmod/localisation/english/machine_age_l_english.yml
@@ -546,7 +546,7 @@
  concept_building_forge_of_the_fellowship_desc: "- งาน ['concept_haruspex']: §G+1§!\n- งาน ['concept_foundry', $job_foundry$]: §G+1§!\n- งาน ['concept_artisan', $job_artisan$]: §G+1§!\n\n§L$building_forge_of_the_fellowship_desc$§!"
  concept_cybernetic_creed_jobs: "นักบวชลัทธิไซเบอร์เนติก"
  concept_cybernetic_creed_jobs_desc: "- ['concept_priest'] ถูกแทนที่ด้วย ['concept_haruspex']\n- ['concept_high_priest'] ถูกแทนที่ด้วย ['concept_technophant']"
- triggered_opinion_cybernetic_creed_of_cyborgs: "Hallowed Cyborgs"
+ triggered_opinion_cybernetic_creed_of_cyborgs: "ไซบอร์กศักดิ์สิทธิ์"
  cybernetic_creed_chain_title: "ลัทธิไซเบอร์เนติก"
  cybernetic_creed_chain_desc: "In pursuing the divine calling, we shall achieve the fusion of the exalted body and sacred cybernetics. Nothing shall hinder our path to enlightenment.\n\n$machine_age.1090.pray$"
  job_haruspex: "Haruspex"
@@ -831,10 +831,10 @@
  cybercreed_tithe_wealth_desc: "$machine_age.1070.intro$ to trade."
  cybercreed_tithe_craft: "The Tithe of Crafting"
  cybercreed_tithe_craft_desc: "$machine_age.1070.intro$ crafting fine goods."
- cyber_creed_flesh_rock: "stone"
- cyber_creed_flesh_plant: "fiber"
- cyber_creed_flesh_arthropod: "chitin"
- cyber_creed_flesh_default: "flesh"
+ cyber_creed_flesh_rock: "หิน"
+ cyber_creed_flesh_plant: "ไฟเบอร์"
+ cyber_creed_flesh_arthropod: "ไคติน"
+ cyber_creed_flesh_default: "เนื้อ"
  building_amphitheater_of_the_mind: "Amphitheater of the Mind"
  building_amphitheater_of_the_mind_desc: "This localized processing shrine allows the semi-connected Choir of the Mind to debate, share, and explore the secrets of the material plane at the speed of light."
  building_grand_concert_hall_of_the_mind: "The Grand Concert Hall of the Mind"
@@ -1005,9 +1005,9 @@
  councilor_augmentation_bazaars: "Implant Impresario"
  councilor_augmentation_bazaars_female: "Implant Impresario"
  councilor_augmentation_bazaars_desc: "The $TITLE$ oversees both product development as well as the distribution of implants to Augmentation Bazaars and Offworld Implant Hubs across the galaxy."
- pop_cat_cyborg: "Cyborg"
- mod_pop_cyborg_happiness: "$pop_cat_cyborg$ Happiness"
- mod_pop_non_cyborg_happiness: "Non-$pop_cat_cyborg$ Happiness"
+ pop_cat_cyborg: "ไซบอร์ก"
+ mod_pop_cyborg_happiness: "ความสุขของ $pop_cat_cyborg$"
+ mod_pop_non_cyborg_happiness: "ความสุขของประชากรที่ ไม่ใช่-$pop_cat_cyborg$"
  origin_arc_welders: "ช่างเชื่อมอาร์ก"
  origin_arc_welders_desc: "Their planet is barren, but their home system is a bounty of riches. To exploit it, these machines built bigger than ever before. A mighty $tech_orbital_arc_furnace$ now dominates their sky, but these master engineers are far from satisfied.\n\nThe galaxy awaits, and the possibilities are endless. All it takes is the ingenuity to seize them."
  origin_tooltip_arc_builders_effects: "- $HOMEWORLD$ แทนที่ ['concept_mining_district', £district£ $district_mining_plural$] ด้วย ['concept_generator_district', £district£ $district_generator_plural$] (ตั้งแต่เริ่มต้น) $NEW_LINE$- $HOME_SYSTEM$ ['concept_arc_furnace'] ถูกสร้างขึ้นรอบ ['concept_pc_molten'] $NEW_LINE$- $ADDITONAL_TECHNOLOGIES_STRING$ ['concept_orbital_arc_furnace',£engineering_research£ $tech_orbital_arc_furnace$] $NEW_LINE$- $GUARANTEED_RESEARCH_OPTION_STRING$ ['concept_mega_engineering', £engineering_research£ $tech_mega_engineering$] เมื่อสร้าง เตาหลอมอาร์ก แห่งที่สอง"
@@ -1101,9 +1101,9 @@
  machine_age.3310.name: "Synthetic Rebirth"
  machine_age.3310.desc: "It has been decades since a [Root.Owner.GetSpeciesName] held a newborn child in their arms. While we may never know that feeling again, today marks the return of hope for our people.\n\nWe've developed §YIdentity Complexes§!, advanced centers where we can copy existing identities to essentially create new people.\n\nWe could randomize personality points from multiple individuals, creating new identities through countless combinations. Alternatively, we might mimic nature's process by nurturing 'mind kernels' in an open virtual setting."
  machine_age.3310.a: "We shall mix our minds."
- machine_age.3310.building_tooltip.a.tt: "$unlock_edict_tt$ ['concept_edict_subsidized_identity_backups']\n$unlock_edict_tt$ ['concept_edict_optimized_identity_creation']\n\n$synth.405.a.tt$\n§YUnlocks Building:§! $building_identity_complex$"
+ machine_age.3310.building_tooltip.a.tt: "$unlock_edict_tt$ ['concept_edict_subsidized_identity_backups']\n$unlock_edict_tt$ ['concept_edict_optimized_identity_creation']\n\n$synth.405.a.tt$\n§Yปลดล็อกสิ่งปลูกสร้าง:§! $building_identity_complex$"
  machine_age.3310.b: "Nature got some systems right."
- machine_age.3310.building_tooltip.b.tt: "$unlock_edict_tt$ ['concept_edict_subsidized_identity_backups']\n$unlock_edict_tt$ ['concept_edict_optimized_identity_creation']\n\n$synth.405.b.tt$\n§YUnlocks Building:§! $building_identity_complex$"
+ machine_age.3310.building_tooltip.b.tt: "$unlock_edict_tt$ ['concept_edict_subsidized_identity_backups']\n$unlock_edict_tt$ ['concept_edict_optimized_identity_creation']\n\n$synth.405.b.tt$\n§Yปลดล็อกสิ่งปลูกสร้าง:§! $building_identity_complex$"
  machine_age.3315.name: "Synthetic Dawning"
  machine_age.3315.desc: "Today marks the end of our digital journey. No one can deny the magnitude of what has been done, nor the sacrifice necessary to achieve it.\n\nWe now stand ascended as a fully digitized and synthetic people. No longer shall we yield to the horrors of disease. No more shall the limitations of feeble genetics confine us.\n\nWe are free to create any reality we see fit."
  machine_age.3315.a: "Hail the synthetic dawn."
@@ -1135,8 +1135,8 @@
  situation_synthetic_fertility_synthesization_outcome: "We will not rest until our future is secure."
  situation_no_synthetics_adopt: "£trigger_no£ Must take $tr_synthetics_adopt$"
  situation_no_robot_research: "£trigger_no£ Must be researching §YRobotic Technology§!"
- situation_synthetic_fertility_synthesization: "Synthesization"
- situation_synthetic_fertility_synthesization_type: "Synthesization"
+ situation_synthetic_fertility_synthesization: "การสังเคราะห์"
+ situation_synthetic_fertility_synthesization_type: "การสังเคราะห์"
  situation_synthetic_fertility_synthesization_monthly_change_tooltip: "The construction of our digital bodies has begun. Our synthetic future awaits."
  situation_synthetic_fertility_synthesization_desc: "We now have the needed technical knowledge to complete the synthesization of our population.\n\n\n§YPops to receive synthetic bodies next month§!: §G[From.GetSynthFertPopsPerMonth]§!"
  stage_1_synthetic_fertility_synthesization_effects: "Existing robotics will be used as synthetic bodies for our digitized population."
