--- a/mod/thmod/localisation/english/machine_age_situations_1_l_english.yml
+++ b/mod/thmod/localisation/english/machine_age_situations_1_l_english.yml
@@ -1,12 +1,12 @@
 ﻿l_english:
- situation_cyberization: "Cyberization"
+ situation_cyberization: "การเปลี่ยนแปลงไซเบอร์"
  situation_cyberization_type: "Ascension Situation"
  situation_cyberization_desc: "We will soon be ready to augment our biological bodies with machine parts. The processing power of the brain and the strength of limbs can be increased. The question is who will benefit the most from such augmentation.\n\n§YPops to receive implants next month§!: §G[From.GetCyberPopsPerMonth]§!"
  situation_cyberization_monthly_change_tooltip: "Our minds and bodies will be upgraded."
  situation_cyberization_outcome: "A cybernetic population."
  stage_cyberization_effects: "We will work to augment ourselves."
  situation_approach_tt: "Approach"
- situation_speed_tt: "Situation Speed"
+ situation_speed_tt: "ความเร็วของสถานการณ์"
  situation_cyberization_cautious: "Cautious"
  approach_cyberization_cautious_tt: "Higher chance of beneficial events.\n$situation_speed_tt$: §R-20%§!"
  situation_cyberization_cautious_approach_tt: "$situation_cyberization_cautious$ $situation_approach_tt$"
@@ -15,7 +15,7 @@
  situation_cyberization_overdrive: "Overdrive"
  approach_cyberization_overdrive_tt: "Higher risk of challenging events.\n$situation_speed_tt$: §G+20%§!"
  situation_cyberization_overdrive_approach_tt: "$situation_cyberization_overdrive$ $situation_approach_tt$"
- situation_cyberization_ongoing_desc: "Cyberization Ongoing"
+ situation_cyberization_ongoing_desc: "การเปลี่ยนแปลงไซเบอร์กำลังดำเนินการอยู่"
  situation_cyberization_pause_desc: "Situation Paused"
  situation_augmentation_center_needed_desc: "£trigger_no£ No enabled $building_augmentation_center$"
  situation_tests_paused_tt: "Tests Paused"
@@ -54,7 +54,7 @@
  job_augmentor_growth_effect_desc: "$job_augmentor_plural_with_icon$ provide $r_engineering$, $r_amenities$, and $m_pop_growth$"
  mod_job_augmentor_add: "$job_augmentor$ Jobs"
  mod_job_augmentor_trade_value_add: "£trade_value£ มูลค่าการค้า จาก £job_augmentor£ $job_augmentor_plural$"
- planet_augmentors: "$job_augmentor$ Jobs"
+ planet_augmentors: "งาน $job_augmentor$"
  mod_planet_augmentors_upkeep_mult: "ค่าบำรุงรักษา $job_augmentor_plural$"
  job_augmentor_drone: "Augmentor Drone"
  job_augmentor_drone_plural: "Augmentor Drones"
@@ -63,7 +63,7 @@
  job_augmentor_drone_research_effect_desc: "£job_augmentor£ $job_augmentor_drone_plural$ provide $r_engineering$ and $r_amenities$"
  job_augmentor_drone_assembly_desc: "$job_augmentor_drone_plural$ merge [Owner.Species.GetFleshTypeCyberCreed] and machine."
  job_augmentor_drone_assembly_effect_desc: "$job_augmentor_drone_plural_with_icon$ provide $r_engineering$, $r_amenities$, $m_pop_growth$, and $m_pop_assembly_organic$"
- mod_job_augmentor_drone_add: "$job_augmentor_drone$ Jobs"
+ mod_job_augmentor_drone_add: "งาน $job_augmentor_drone$"
  mod_job_augmentor_drone_per_pop: "§G+1§! $job_augmentor_drone$ Job per $VALUE$ Pops"
  mod_job_augmentor_drone_per_pop_short: "\n§G+1§! £mod_job_augmentor_drone_add£ per $VALUE$ £pop£"
  mod_planet_jobs_specialist_unity_produces_mult: "$pop_cat_specialist$ Unity Output"
@@ -88,9 +88,9 @@
  mod_job_cyberdome_spectator_per_pop: "$job_cyberdome_spectator$ Jobs per $VALUE$ Pops: §G+1§!"
  mod_job_cyberdome_spectator_per_pop_short: "\n$mod_job_cyberdome_spectator_add$ per $VALUE$ £pop£: §G+1§!"
  planet_cyberdome_spectator: "$job_cyberdome_spectator_plural$"
- trait_limited_cybernetic: "Limited Cybernetic"
+ trait_limited_cybernetic: "ไซเบอร์เนติกแบบจำกัด"
  trait_limited_cybernetic_desc: "This species has the least amount of implants necessary to function in a cybernetic society."
- leader_trait_limited_cyborg: "Limited Cyborg"
+ leader_trait_limited_cyborg: "ไซบอร์กแบบจำกัด"
  leader_trait_limited_cyborg_desc: "This leader has the least amount of implants necessary to function in a cybernetic society."
  forced_cyberization_full: "Forced Cyberization"
  forced_cyberization_limited: "Limited Cyberization"
@@ -161,7 +161,7 @@
  cyber_event_worklife_leave_desc: "People are required to isolate job-related memories when leaving the workplace to prevent industrial espionage."
  cyber_event_worklife_isolate: "Isolated Worker Memory"
  cyber_event_worklife_isolate_desc: "People are required to fully separate work-related memories from their leisure time and vice versa to prevent industry espionage and ethics conflicts with the employer."
- mod_pop_cyborg_specialist_happiness: "Cyborg $pop_cat_specialist$ Happiness"
+ mod_pop_cyborg_specialist_happiness: "ความสุขของไซบอร์ก $pop_cat_specialist$"
  cyber_event_parental_control: "Full Parental Motor Control"
  cyber_event_parental_control_desc: "Parents are given control over their underaged children's motor functions."
  cyber_event_parental_limited: "Limited Parental Motor Control"
@@ -471,7 +471,7 @@
  concept_auth_cyber_imperial_collectivist: "$auth_cyber_imperial_collectivist$"
  building_cyberdome: "Cyberdome"
  building_cyberdome_desc: "Hosts savage cybersports with augmented athletes for the entertainment of the imperial citizens. Enhanced gladiators, athletes and sprinters compete for our favor until damaged or dead."
- unlock_building_cyberdome: "Unlocks Building: ['concept_building_cyberdome']"
+ unlock_building_cyberdome: "ปลดล็อกสิ่งปลูกสร้าง: ['concept_building_cyberdome']"
  building_cyberdome_edict_effects: "$NEW_LINE$$MOD_PLANET_HOUSING_ADD$: §G+50§!\n$MOD_POP_GROWTH_FROM_IMMIGRATION$: §G+20%§!\n$mod_planet_pops_upkeep_mult$: §G-10%§!\n$job_cyberdome_duelist$ Jobs per §Y20§! Pops: §G+1§!\n$job_cyberdome_spectator$ Jobs per §Y10§! Pops: §G+1§!"
  building_cyberdome_edict_tt: "Edict $edict_neurocasted_spectacles$ Effects:\n$building_cyberdome_edict_effects$"
  concept_building_cyberdome: "$building_cyberdome$"
