--- a/mod/thmod/localisation/english/machine_age_situations_3_l_english.yml
+++ b/mod/thmod/localisation/english/machine_age_situations_3_l_english.yml
@@ -6,11 +6,11 @@
  situation_transformation_outcome: "A transformed machine population."
  stage_transformation_effects: "We must evaluate the outcomes and implement the most optimal process to transform ourselves."
  situation_transformation_errorcorrecting: "Error Correcting"
- approach_transformation_errorcorrecting_tt: "Situation Speed: §R-20%§!\nMonthly Unity: §YUnaffected§!"
+ approach_transformation_errorcorrecting_tt: "ความเร็วของสถานการณ์: §R-20%§!\nเอกภาพต่อเดือน: §Yไม่ได้รับผลกระทบ§!"
  situation_transformation_realtime: "Real Time"
- approach_transformation_realtime_tt: "Situation Speed: §YUnaffected§!"
+ approach_transformation_realtime_tt: "ความเร็วของสถานการณ์: §Yไม่ได้รับผลกระทบ§!"
  situation_transformation_overclocked: "Overclocked"
- approach_transformation_overclocked_tt: "Situation Speed: §G+20%§!"
+ approach_transformation_overclocked_tt: "ความเร็วของสถานการณ์: §G+20%§!"
  transformation_waste_discard_tt: "Discard Old Bodies"
  transformation_waste_recycle_tt: "Recycle Old Bodies"
  transformation_speed: "§Y$situation_transformation$§! situation speed"
