--- a/mod/thmod/localisation/english/paragon_4_l_english.yml
+++ b/mod/thmod/localisation/english/paragon_4_l_english.yml
@@ -267,9 +267,9 @@
  trait_ruler_military_pioneer_2_hive_desc:0 "$trait_ruler_military_pioneer_hive_desc$"
  trait_ruler_military_pioneer_2_machine:0 "$trait_ruler_military_pioneer_machine$ II"
  trait_ruler_military_pioneer_2_machine_desc:0 "$trait_ruler_military_pioneer_machine_desc$"
- leader_trait_defence_engineer_hive:0 "Defense Platform Engineering"
+ leader_trait_defence_engineer_hive:0 "วิศวกรรมแพลตฟอร์มป้องกัน"
  leader_trait_defence_engineer_hive_desc:1 "This node provides optimized upgrades to Defense Platforms."
- leader_trait_defence_engineer_machine:0 "Defense Platform Engineering"
+ leader_trait_defence_engineer_machine:0 "วิศวกรรมแพลตฟอร์มป้องกัน"
  leader_trait_defence_engineer_machine_desc:1 "This unit provides optimized upgrades to Defense Platforms."
  leader_trait_defence_engineer_2_hive:0 "$leader_trait_defence_engineer_hive$ II"
  leader_trait_defence_engineer_2_hive_desc:0 "$leader_trait_defence_engineer_hive_desc$"
