--- a/mod/thmod/localisation/english/traditions_l_english.yml
+++ b/mod/thmod/localisation/english/traditions_l_english.yml
@@ -540,10 +540,10 @@
  tr_genetics_finish:0 "วัฒนธรรมพันธุศาสตร์สำเร็จ"
  tr_genetics_resequencing:0 "เรียงลำดับพันธุกรรม"
  tr_genetics_resequencing_delayed:0 "No longer are we limited by the basic biological structure of a species. As the sculptor shapes clay, DNA is ours to mold."
- tr_genetics_resequencing_desc:1 "Can §Yremove beneficial§! Traits and §Yadd detrimental§! Traits with Species Modification"
+ tr_genetics_resequencing_desc:1 "สามารถ §Yลบคุณลักษณะที่เป็นประโยชน์§! และ §Yเพิ่มคุณลักษณะที่เป็นอันตราย§! ได้โดยการปรับเปลี่ยนเผ่าพันธุ์"
  tr_genetics_creation:0 "วิศวกรรมการกำเนิด"
  tr_genetics_creation_delayed:0 "Nature is a blind guide. We have moved beyond the lumbering processes of evolution, and have become masters of our own destiny."
- tr_genetics_creation_desc:1 "Can §Yalter§! Pop §Yappearance§! with Species Modification\nAllows the Assimilation of Pops into or out of a §YHive-Mind§!"
+ tr_genetics_creation_desc:1 "สามารถ §Yเปลี่ยน§! §Yรูปลักษณ์§! ของประชากรได้ด้วยการปรับเปลี่ยนเผ่าพันธุ์\nทำให้สามารถเปลี่ยนประชากรให้เหมือนหรือคล้ายกันกับ §Yสิ่งมีชีวิตจิตสำนึกร่วม(Hive-Mind)§! หรือต่างออกไปก็ได้"
  tr_genetics_enhanced_expression:0 "การแสดงออกของยีน"
  tr_genetics_enhanced_expression_delayed:0 "Selectively targeting sequences allows for artificial atavism, in which previously regressed traits can be expressed."
  tr_genetics_enhanced_expression_desc:1 "ปลดล็อกคุณลักษณะ §Yขั้นสูง§! สำหรับการปรับเปลี่ยนเผ่าพันธุ์"
@@ -552,29 +552,29 @@
  tr_genetics_efficient_cloning:0 "กระตุ้นเซลล์ต้นกำเนิด (สเต็มเซลล์)"
  tr_genetics_efficient_cloning_delayed:0 "Optimization of cloning facilities will allow for parallel embryonic development."
  tr_genetics_efficient_cloning_desc:0 "§Y$MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$§! ของ §Y$building_clone_vats$§! เพิ่มขึ้น §G+1.5§!"
- tr_genetics_adopt_modifier_desc:1 "§YUnlocks Building:§! $building_clone_vats$"
+ tr_genetics_adopt_modifier_desc:1 "§Yปลดล็อกสิ่งปลูกสร้าง:§! $building_clone_vats$"
  tr_genetics_finish_modifier_desc:1 "$TRADITIONS_FINISH_AP$"
- tr_genetics_finish_extra_traits_modifier_desc:1 "Allows research of rare §YTransgenesis§! technologies\n$mod_planet_buildings_clone_vats_upkeep_mult$: §G-33%§!\n$TRADITIONS_FINISH_AP$"
+ tr_genetics_finish_extra_traits_modifier_desc:1 "สามารถวิจัยเทคโนโลยี §Yกระบวนการถ่ายโอนยีน§! ที่เป็นเทคโนโลยีหายากได้\n$mod_planet_buildings_clone_vats_upkeep_mult$: §G-33%§!\n$TRADITIONS_FINISH_AP$"
  tradition_cybernetics:0 "ไซเบอร์เนติกส์"
- tradition_cybernetics_desc:0 "Our future lies in the fusion of [Owner.Species.GetFleshTypeCyberCreed] and machine."
+ tradition_cybernetics_desc:0 "อนาคตของเราอยู่ที่การหลอมรวมของ[Owner.Species.GetFleshTypeCyberCreed]และเครื่องจักร"
  tr_cybernetics_adopt:0 "วัฒนธรรมไซเบอร์เนติกส์"
- tr_cybernetics_adopt_desc:1 "Starts a §YSituation§! to grant the founding species the §Y$trait_cybernetic$§! trait"
+ tr_cybernetics_adopt_desc:1 "เริ่มต้น §Yสถานการณ์§! เพื่อให้คุณลักษณะ §Y$trait_cybernetic$§! กับเผ่าพันธุ์ผู้ก่อตั้ง"
  tr_cybernetics_adopt_utopia_desc: "Unlocks a §YSpecial Project§! to grant all species the §Y$trait_cybernetic$§! trait."
  tr_cybernetics_adopt_hive:0 "$tr_cybernetics_adopt$"
  tr_cybernetics_adopt_hive_desc:0 "$tr_cybernetics_adopt_desc$"
  tr_cybernetics_adopt_hive_utopia_desc: "$tr_cybernetics_adopt_utopia_desc$"
  tr_cybernetics_finish:0 "วัฒนธรรมไซเบอร์เนติกส์สำเร็จ"
- tr_cybernetics_finish_situation_effects: "\n$tr_cybernetics_situation_during$Situation Speed: §G+25%§!$tr_cybernetics_situation_after$$mod_planet_cyborg_jobs_produces_mult$: §G+10%§!\n$mod_BIOLOGICAL_species_trait_picks_add$: §G+1§!\n$MOD_COUNTRY_ASCENSION_PERKS_ADD$: §G+1§!"
- tr_cybernetics_situation_during: "§HDuring $situation_cyberization$§!\n"
- tr_cybernetics_situation_after: "\n\n§SAfter $situation_cyberization$§!\n"
- tr_cybernetics_situation: "$tr_cybernetics_situation_during$Situation Speed: §G+5%§!$tr_cybernetics_situation_after$"
+ tr_cybernetics_finish_situation_effects: "\n$tr_cybernetics_situation_during$ความเร็วของสถานการณ์: §G+25%§!$tr_cybernetics_situation_after$$mod_planet_cyborg_jobs_produces_mult$: §G+10%§!\n$mod_BIOLOGICAL_species_trait_picks_add$: §G+1§!\n$MOD_COUNTRY_ASCENSION_PERKS_ADD$: §G+1§!"
+ tr_cybernetics_situation_during: "§Hในระหว่าง $situation_cyberization$§!\n"
+ tr_cybernetics_situation_after: "\n\n§Sหลังจาก $situation_cyberization$§!\n"
+ tr_cybernetics_situation: "$tr_cybernetics_situation_during$ความเร็วของสถานการณ์: §G+5%§!$tr_cybernetics_situation_after$"
  tr_cybernetics_transubstantiation_synthesis:0 "สังเคราะห์เปลี่ยนสภาพ"
  tr_cybernetics_transubstantiation_synthesis_delayed:0 "The new world has no room for those not infused with the machine."
  tr_cybernetics_transubstantiation_synthesis_desc:0 "$CYBORG_ASSIMILATION_CITIZENSHIP_ENABLED$"
  tr_cybernetics_transubstantiation_synthesis_situation_effects: "$tr_cybernetics_situation$$tr_cybernetics_transubstantiation_synthesis_desc$"
  tr_cybernetics_organ_harvesting:0 "การเก็บเกี่ยวอวัยวะ"
  tr_cybernetics_organ_harvesting_situation: "$tr_cybernetics_organ_harvesting$"
- tr_cybernetics_organ_harvesting_desc:0 "Planets with ongoing §YPurges§! gain §G+10%§! £mod_pop_growth_speed£ §YCyborg $MOD_POP_GROWTH_SPEED$§!"
+ tr_cybernetics_organ_harvesting_desc:0 "ดาวเคราะห์ที่กำลังมีการ §Yกวาดล้าง§! ได้รับ £mod_pop_growth_speed£ §Y$MOD_POP_GROWTH_SPEED$ ไซบอร์ก§! §G+10%§!"
  tr_cybernetics_organ_harvesting_delayed:0 "Those deemed unsuitable are granted purpose only once recycled."
  tr_cybernetics_organ_harvesting_situation_effects: "$tr_cybernetics_situation$$tr_cybernetics_organ_harvesting_desc$"
  tr_cybernetics_metabolic_reprocessing:0 "กระบวนการเผาผลาญอาหารซ้ำ"
@@ -585,14 +585,14 @@
  tr_cybernetics_metabolic_reprocessing_situation_hive_effects: "$tr_cybernetics_situation$$tr_cybernetics_metabolic_reprocessing_hive_desc$"
  tr_cybernetics_integrated_anatomy:0 "รวมเข้ากับร่างกาย"
  tr_cybernetics_integrated_anatomy_delayed:0 "Only by alloying [Owner.Species.GetFleshTypeCyberCreed], steel, and nano-carbon composite can we truly reach perfection."
- tr_cybernetics_integrated_anatomy_desc:0 "Allows selection of §YCyborg§! traits for Species Modification that can be applied to species with the §YCybernetic§! trait.\n"
+ tr_cybernetics_integrated_anatomy_desc:0 "สามารถเลือกคุณลักษณะทาง §Yไซบอร์ก§! ในการปรับเปลี่ยนเผ่าพันธุ์ได้ โดยการเลือกคุณลักษณะเป็น §Yไซเบอร์เนติก§!\n"
  tr_cybernetics_integrated_anatomy_situation_effects: "$tr_cybernetics_situation$$tr_cybernetics_integrated_anatomy_desc$$mod_BIOLOGICAL_species_trait_picks_add$: §G+1§!"
  requires_tr_cybernetics_integrated_anatomy: "$TRIGGER_FAIL$Requires the §Y$tr_cybernetics_integrated_anatomy$§! Tradition."
  tr_cybernetics_augmentation_overload: "Augmentation Overload"
  tr_cybernetics_augmentation_overload_delayed: "The only way to keep up with people's demand for implants are more $job_augmentor_plural$."
- tr_cybernetics_augmentation_overload_desc: "$job_augmentor_plural_with_icon$ per $building_augmentation_center$: §G+2§!"
+ tr_cybernetics_augmentation_overload_desc: "$job_augmentor_plural_with_icon$ ต่อ $building_augmentation_center$: §G+2§!"
  tr_cybernetics_augmentation_centers: "Augmentation Centers"
- tr_cybernetics_augmentation_centers_desc: "§YUnlocks Building:§! $building_augmentation_center$"
+ tr_cybernetics_augmentation_centers_desc: "§Yปลดล็อกสิ่งปลูกสร้าง:§! $building_augmentation_center$"
  tr_cybernetics_augmentation_centers_delayed: "The $building_augmentation_center$ is a hub for cybernetic implantation. Part shopping mall, part operating center, and part mechanic shop."
  tr_cybernetics_augmentation_overload_situation_effects: "$tr_cybernetics_situation$$tr_cybernetics_augmentation_overload_desc$"
  tr_cybernetics_synaptic_sub_processing:0 "การประมวลผลระบบประสาทย่อย"
@@ -603,7 +603,7 @@
  tr_cybernetics_modular_cybernetics:0 "ชิ้นส่วนไซเบอร์เนติกส์"
  tr_cybernetics_modular_cybernetics_delayed:0 "Improving the compatibility of our cybernetic enhancements will reduce downtime while retrofitting."
  tr_cybernetics_modular_cybernetics_hive_delayed:0 "$tr_cybernetics_modular_cybernetics_delayed$"
- tr_cybernetics_modular_cybernetics_tt:1 "§Y$mod_ROBOT_species_trait_points_add$§! and §Y$mod_ROBOT_species_trait_picks_add$§! also apply to Organic species."
+ tr_cybernetics_modular_cybernetics_tt:1 "§Y$mod_ROBOT_species_trait_points_add$§! และ §Y$mod_ROBOT_species_trait_picks_add$§! ยังใช้กับเผ่าพันธุ์สิ่งมีชีวิตได้อีกด้วย"
  tr_cybernetics_modular_cybernetics_tt_2:0 "$tr_cybernetics_modular_cybernetics_tt$\n$MOD_COUNTRY_MODIFY_SPECIES_COST_MULT$: §G-50%§!"
  tr_cybernetics_modular_cybernetics_hive_tt:0 "$MOD_COUNTRY_MODIFY_SPECIES_COST_MULT$: §G-50%§!\n$mod_BIOLOGICAL_species_trait_points_add$: §G+3§!"
  tr_cybernetics_modular_cybernetics_situation_effects: "$tr_cybernetics_situation$$tr_cybernetics_modular_cybernetics_tt_2$"
@@ -633,20 +633,20 @@
  tr_cybernetics_assimilator_gestation_desc:0 "Gain access to the §Y$col_gestation$§! Colony Desigation.\n§YGestation Worlds§! provide §Y£job_gestation_drone£ $job_gestation_drone$§! Jobs providing Empire-wide £mod_pop_growth_speed£ §Y$MOD_POP_GROWTH_SPEED$§!"
  tr_cybernetics_assimilator_modular_cybernetics:0 "ชิ้นส่วนไซเบอร์เนติกส์"
  tr_cybernetics_assimilator_modular_cybernetics_delayed:0 "Improving the intercompatibility of our cybernetic enhancements will reduce downtime when refitting."
- tr_cybernetics_assimilator_modular_cybernetics_tt:0 "§Y$mod_MACHINE_species_trait_points_add$§! and §Y$mod_MACHINE_species_trait_picks_add$§! also apply to Cybernetic species."
+ tr_cybernetics_assimilator_modular_cybernetics_tt:0 "§Y$mod_MACHINE_species_trait_points_add$§! และ §Y$mod_MACHINE_species_trait_picks_add$§! ยังใช้กับเผ่าพันธุ์ไซเบอร์เนติก/จักรกลได้อีกด้วย"
  tr_cybernetics_assimilator_modular_cybernetics_tt_2:0 "$tr_cybernetics_assimilator_modular_cybernetics_tt$\n$MOD_COUNTRY_MODIFY_SPECIES_COST_MULT$: §G-50%§!"
  tradition_synthetics:0 "จักรกลสังเคราะห์"
  tradition_synthetics_desc:0 "รุ่งอรุณของยุคจักรกลสังเคราะห์"
  tr_synthetics_adopt:0 "วัฒนธรรมจักรกลสังเคราะห์"
- tr_synthetics_adopt_desc: "Starts a §YSituation§! to transform the founding species into a §Y$trait_mechanical$§! species."
+ tr_synthetics_adopt_desc: "เริ่มต้น §Yสถานการณ์§! เพื่อเปลี่ยนแปลงเผ่าพันธุ์ผู้ก่อตั้งให้เป็นเผ่าพันธุ์ §Y$trait_mechanical$§!"
  tr_synthetics_adopt_utopia: "$tr_synthetics_adopt$"
  tr_synthetics_adopt_utopia_desc: "Unlocks a §YSpecial Project§! to transfer the minds of our citizens into §YSynthetic§! bodies.\nTech progress gained (if not researched):$TABBED_NEW_LINE$£engineering£ §Y$tech_synthetic_leaders$§! §G+10%§!"
  tr_synthetics_finish:0 "วัฒนธรรมจักรกลสังเคราะห์สำเร็จ"
  tr_synthetics_finish_machine_desc:0 "ผู้นำ §Y$trait_machine_unit$§! ทั้งหมดได้รับคุณลักษณะ §Y$leader_trait_synthetic$§!"
- tr_synthetics_finish_situation_effects: "\n$tr_synthetics_situation_during$Situation Speed: §G+25%§!$tr_synthetics_situation_after$$mod_ROBOT_species_trait_picks_add$: §G+2§!\n$mod_ROBOT_species_trait_points_add$: §G+2§!\n$MOD_COUNTRY_MODIFY_SPECIES_COST_MULT$: §G-50%§!\n$MOD_COUNTRY_ASCENSION_PERKS_ADD$: §G+1§!"
- tr_synthetics_situation_during: "§HDuring $situation_digitization$§!\n"
- tr_synthetics_situation_after: "\n\n§SAfter $situation_digitization$§!\n"
- tr_synthetics_situation: "$tr_synthetics_situation_during$Situation Speed: §G+5%§!$tr_synthetics_situation_after$"
+ tr_synthetics_finish_situation_effects: "\n$tr_synthetics_situation_during$ความเร็วของสถานการณ์: §G+25%§!$tr_synthetics_situation_after$$mod_ROBOT_species_trait_picks_add$: §G+2§!\n$mod_ROBOT_species_trait_points_add$: §G+2§!\n$MOD_COUNTRY_MODIFY_SPECIES_COST_MULT$: §G-50%§!\n$MOD_COUNTRY_ASCENSION_PERKS_ADD$: §G+1§!"
+ tr_synthetics_situation_during: "§Hในระหว่าง $situation_digitization$§!\n"
+ tr_synthetics_situation_after: "\n\n§Sหลังจาก $situation_digitization$§!\n"
+ tr_synthetics_situation: "$tr_synthetics_situation_during$ความเร็วของสถานการณ์: §G+5%§!$tr_synthetics_situation_after$"
  tr_synthetics_maintenance_protocols:0 "โปรโตคอล-บำรุงรักษา"
  tr_synthetics_maintenance_protocols_delayed:0 "Routine preventative maintenance will reduce malfunctions across all robot units."
  tr_synthetics_maintenance_protocols_situation_effects: "$tr_synthetics_situation$$MOD_POP_AMENITIES_USAGE_ROBOTIC_MULT$: §G-10%§!"
@@ -655,7 +655,7 @@
  tr_synthetics_optimization_algorithms_situation_effects: "$tr_synthetics_situation$$mod_planet_jobs_robotic_produces_mult$: §G+10%§!"
  tr_synthetics_transubstatiation_synthesis:0 "$tr_cybernetics_transubstantiation_synthesis$"
  tr_synthetics_transubstatiation_synthesis_delayed:0 "The age of organics is over. This galaxy's future belongs to the machines."
- tr_synthetics_transubstatiation_synthesis_desc:0 "Grants access to the §YAssimilation§! Citizenship §YSpecies Right§!, allowing future additions to the populace to be turned into §YSynths§!."
+ tr_synthetics_transubstatiation_synthesis_desc:0 "สามารถเข้าถึง §Yสิทธิการเป็นพลเมือง§! แบบ §Yการทำให้เหมือนหรือคล้ายกัน§! ซึ่ง ช่วยให้การเพิ่มจำนวนประชากรในอนาคต สามารถเปลี่ยนเป็นแบบ §Yสังเคราะห์§! ได้"
  tr_synthetics_transubstatiation_synthesis_situation_effects: "$tr_synthetics_situation$$tr_synthetics_transubstatiation_synthesis_desc$"
  tr_synthetics_assembly_systems:0 "$tr_synthetics_transubstatiation_synthesis$"
  tr_synthetics_assembly_systems_delayed:0 "$tr_synthetics_transubstatiation_synthesis_delayed$"
@@ -665,11 +665,11 @@
  tr_synthetics_power_systems_situation_effects: "$tr_synthetics_situation$$mod_planet_pops_robotics_upkeep_mult$: §G-25%§!\n$mod_planet_pop_assemblers_upkeep_mult$: §G-25%§!"
  tr_synthetics_prefabricated_components:0 "ชิ้นส่วนประกอบสำเร็จรูป"
  tr_synthetics_prefabricated_components_delayed: "By shipping standardized components and an assembly instruction, anyone can put their next upgrade together."
- tr_synthetics_prefabricated_components_situation_effects: "$tr_synthetics_situation$ £building£ §YCapital Buildings§! ให้งาน £job_roboticist£ §Y$job_roboticist$§! §G+1§!\n£job_roboticist£ §Y$job_roboticist$§! ให้ $i_amenities$ §G+2§!"
+ tr_synthetics_prefabricated_components_situation_effects: "$tr_synthetics_situation$ £building£ §Yสิ่งปลูกสร้างที่เป็นเมืองหลวง§! ให้งาน £job_roboticist£ §Y$job_roboticist$§! §G+1§!\n£job_roboticist£ §Y$job_roboticist$§! ให้ $i_amenities$ §G+2§!"
  tr_synthetics_prefabricated_components_effects: "£building£ §Yสิ่งปลูกสร้างที่เป็นเมืองหลวง§! ให้งาน £job_roboticist£ §Y$job_roboticist$§! §G+1§!\n£job_roboticist£ §Y$job_roboticist$§! ให้ §G+2§! $i_amenities$"
  tr_synthetics_prefabricated_components_machine: "$tr_synthetics_prefabricated_components$"
  tr_synthetics_prefabricated_components_machine_delayed: "Having a ready supply of prefabricated components makes it easier to assemble new models."
- tr_synthetics_prefabricated_components_machine_effects: "£building£ §YCapital Buildings§! provide §G+1§! £job_replicator£ §Y$job_replicator$§! Jobs"
+ tr_synthetics_prefabricated_components_machine_effects: "£building£ §Yสิ่งปลูกสร้างที่เป็นเมืองหลวง§! ให้งาน £job_replicator£ §Y$job_replicator$§! §G+1§!"
  tr_synthetics_solid_state_actuators:0 "ตัวกระตุ้นแบบแข็ง"
  tr_synthetics_solid_state_actuators_delayed:0 "Solid-state actuators improve component miniaturization which, though expensive, allows leaders to harden vital subsystems."
  tr_synthetics_solid_state_actuators_situation: "$tr_synthetics_solid_state_actuators$"
